# talks

.github/workflows/: deploy.yml  export.yml
knockin-on-headers-door/: LICENSE  README.md
knockin-on-headers-door/presentation/: .gitignore  global-bottom.vue  package-lock.json  package.json  slides.md  uno.config.ts
knockin-on-headers-door/presentation/components/: DependencyManagersFrustrationOutcome.vue  PresentationQrCode.vue
knockin-on-headers-door/presentation/pages/: 0-information.md  1-why-modules.md  2-what-are-modules.md  3-traditional-headers-vs-modules.md  4-compiler-support-landscape.md  5-build-systems-and-tooling.md  6-adopting-modules-in-projects.md  7-future-and-current-outlook.md  8-conclusion.md  9-appendix.md
knockin-on-headers-door/presentation/setup/: mermaid.ts  shiki.ts
knockin-on-headers-door/testing/: .gitignore  README.md  std.txt
knockin-on-headers-door/testing/bazel_modules/: MODULE.bazel  lib.cppm  lib.impl.cpp  main.cpp  run.sh
knockin-on-headers-door/testing/benchmarking/: README.md  clang.sh  gcc.sh  msvc.ps1  stdcpp.h
knockin-on-headers-door/testing/benchmarking/import_all/: hello_world.cpp
knockin-on-headers-door/testing/benchmarking/import_necessary/: hello_world.cpp  mix.cpp
knockin-on-headers-door/testing/benchmarking/import_std/: hello_world.cpp  mix.cpp
knockin-on-headers-door/testing/benchmarking/import_stdcpp_h/: hello_world.cpp  mix.cpp
knockin-on-headers-door/testing/cmake_import_std/: CMakeLists.txt  README.md  main.cpp
knockin-on-headers-door/testing/cmake_modules/: CMakeLists.txt  README.md  lib.cppm  lib.impl.cpp  main.cpp
knockin-on-headers-door/testing/conan_fmt_bmi/: CMakeLists.txt  clang.profile.txt  clang.sh  conanfile.txt
knockin-on-headers-door/testing/conan_fmt_bmi/fmt-bmi/: conanfile.py
knockin-on-headers-door/testing/conan_fmt_module_wrapper/: CMakeLists.txt  README.md  clang.sh  conanfile.txt  fmt.cppm  gcc.sh  main.cpp  msvc.ps1
knockin-on-headers-door/testing/feature_testing/: CMakeLists.txt  clang.sh  gcc.sh  msvc.ps1
knockin-on-headers-door/testing/feature_testing/features/HeaderUnit/: CMakeLists.txt  gcc_test.cpp  test.cppm
knockin-on-headers-door/testing/pimpl/: README.md
knockin-on-headers-door/testing/pragma_once_gotcha/: README.md  main.cpp
knockin-on-headers-door/testing/stl_header_units/: README.md  clang_import_all.sh  clang_import_stdcpp.sh  gcc_import_all.sh  gcc_import_stdcpp.sh  import_all.cpp  msvc_import_all.ps1  msvc_import_stdcpp.ps1  stdcpp.h
knockin-on-headers-door/testing/vcpkg_fmt_module_wrapper/: CMakeLists.txt
(+42 files in other folders)
